# crypto

./: Cargo.toml
merlin/: Cargo.toml
merlin/src/: strobe.rs  transcript.rs
saver/: Cargo.toml
schnorr_pok/: Cargo.toml
schnorr_pok/src/: discrete_log.rs  discrete_log_pairing.rs  error.rs  inequality.rs  mult_relations.rs  partial.rs  pok_generalized_pedersen.rs
utils/: Cargo.toml
utils/benches/: scalar_multiplication.rs
utils/src/: aliases.rs  commitment.rs  ecies.rs  elgamal.rs  error.rs  hashing_utils.rs  lib.rs  msm.rs  owned_pairs.rs  pairs.rs  poly.rs  randomized_mult_checker.rs  randomized_pairing_check.rs  schnorr_signature.rs  solve_discrete_log.rs  transcript.rs  try_iter.rs
