[package]
name = "schnorr_pok"
version = "0.22.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Schnorr, Okamoto, Chaum-Pedersen protocols for proof of knowledge, equality and inequality of one or more discrete logs. Working in elliptic curve and pairing groups"
keywords = ["Schnorr", "proof-of-knowledge", "ZKPoK", "proof-of-equality", "proof-of-inequality"]

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
#ark-serialize = { workspace = true, default-features = false }
#ark-ff = { workspace = true, default-features = false }
#ark-ec = { workspace = true, default-features = false }
#ark-std = { workspace = true, default-features = false }

ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0", default-features = false, features = [ "derive" ] }

#ark-ff = { path = "../../arkworks-algebra/ff", default-features = false }
#ark-ec = { path = "../../arkworks-algebra/ec", default-features = false }
#ark-serialize = { path = "../../arkworks-algebra/serialize", default-features = false, features = [ "derive" ] }
#ark-std = { path = "../../../arkworks/std", default-features = false }

rayon = { workspace = true, default-features = false, optional = true}
digest = { workspace = true, default-features = false }
dock_crypto_utils = { version = "0.22.0", default-features = false, path = "../utils" }
serde = { workspace = true, default-features = false, optional = true }
serde_with = { workspace = true, default-features = false, optional = true }
cfg_eval = { workspace = true, default-features = false }
zeroize = { workspace = true, default-features = false }

[dev-dependencies]
blake2 = { workspace = true, default-features = false }
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = ["curve"] }
serde_json = "1.0"
rmp-serde = "1.0"
rand_core = "0.6.4"

[features]
default = [ "std", "parallel", "serde" ]

no_std = [ "zeroize/alloc" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "dock_crypto_utils/std", "serde?/std", "zeroize/std" ]

print-trace = [ "ark-std/print-trace", "dock_crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon", "dock_crypto_utils/parallel" ]
serde = ["dep:serde", "serde_with", "dock_crypto_utils/serde"]
