[package]
name = "dock_crypto_utils"
version = "0.22.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common code for Dock's crypto libraries"

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
# ark-ff = { workspace = true, default-features = false }
# ark-ec = { workspace = true, default-features = false }
# ark-std = { workspace = true, default-features = false }
# ark-poly = { workspace = true, default-features = false }
# ark-serialize = { workspace = true, default-features = false }

ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-poly = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0", default-features = false, features = [ "derive" ] }
ark-std = { version = "^0.5.0", default-features = false }

#ark-ff = { path = "../../arkworks-algebra/ff", default-features = false }
#ark-ec = { path = "../../arkworks-algebra/ec", default-features = false }
#ark-poly = { path = "../../arkworks-algebra/poly", default-features = false }
#ark-serialize = { path = "../../arkworks-algebra/serialize", default-features = false, features = [ "derive" ] }
#ark-std = { path = "../../../arkworks/std", default-features = false }

zeroize = { workspace = true, default-features = false }
digest = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, optional = true }
serde_with = { workspace = true, default-features = false, optional = true }
cfg_eval = { workspace = true, default-features = false }
rayon = { workspace = true, default-features = false, optional = true }
merlin = { package = "dock_merlin", version = "3.0.0", default-features = false, path = "../merlin" }
itertools = { workspace = true, default-features = false }
num = { version = "0.4.1", default-features = false }
hkdf = { version = "0.12.3", default-features = false}
sha2 = { version = "0.10.8", default-features = false}
aead = { version = "0.5.2", default-features = false, features = [ "alloc" ]}
integer-sqrt = { version = "0.1.5", default-features = false }
hashbrown = {version = "0.16", default-features = false}
ahash = { version = "0.8", default-features = false }

[dev-dependencies]
blake2 = { workspace = true, default-features = false }
chacha20poly1305 = {version = "0.10.1", default-features = false}
criterion = { version = "0.5", features = ["html_reports"] }

#ark-bls12-381 = { workspace = true, default-features = false }
#ark-secp256r1 = { workspace = true, default-features = false }

ark-bls12-381 = { version = "^0.5.0", default-features = false, features = ["curve"] }
ark-secp256r1 = { version = "^0.5.0", default-features = false }
ark-pallas = { version = "^0.5.0", default-features = false, features = ["curve"] }

#ark-bls12-381 = { path = "../../arkworks-algebra/curves/bls12_381", default-features = false }
#ark-secp256r1 = { path = "../../arkworks-algebra/curves/secp256r1", default-features = false }
#ark-pallas = { path = "../../arkworks-algebra/curves/pallas", default-features = false }

[[bench]]
name = "scalar_multiplication"
harness = false

[features]
default = ["std", "parallel", "serde"]

std = ["ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std", "serde?/std", "ark-poly/std", "merlin/std", "num/std", "hkdf/std", "sha2/std", "chacha20poly1305/std", "zeroize/std"]

print-trace = ["ark-std/print-trace"]
parallel = [ "std", "rayon" ]
parallel_full = [ "parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel" ]
serde = ["dep:serde", "serde_with", "merlin/serde"]
